--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=jiegao
-DB_USERNAME=jiegao
-DB_PASSWORD=jiegao
+DB_DATABASE=yangcai
+DB_USERNAME=yangcai
+DB_PASSWORD=yangcai
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
